// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<div
  className="Modal__overlay___1esDn"
  onClick={[Function]}
  onScroll={[Function]}
  role="presentation"
>
  <div
    className="Modal__root___2RrQs"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="Modal__head___21nX6"
    >
      <h3
        className="Modal__headTitle___24upJ"
      >
        workLog:modal.add.title
      </h3>
      <button
        className="Button__root___1siS8
        Button__priorityFlat___21jzk
        Button__sizeLarge___2ZbaS
        
        Button__iconPositionBefore___1ljSO"
        disabled={false}
        onClick={[Function]}
        title={null}
        type="button"
      >
        <span
          className="Button__icon___2PzW6
            Button__resetMargin___3FmbU"
        >
          <svg
            className="Icon__isRootLarge___1tPUq Icon__root___3fU2F"
            style={
              Object {
                "fill": "currentColor",
              }
            }
          >
            <use
              xlinkHref="#ic_close_48px"
            />
          </svg>
        </span>
        <span
          className="Button__hiddenLabel___22zCB"
        >
          general:action.close
        </span>
      </button>
    </div>
    <div
      className="Modal__body___2m3j7"
    >
      <p
        className="formErrorText"
      />
      <form>
        <fieldset
          className="fieldset"
        >
          <div
            className="field"
          >
            <p
              className="formInfoText"
            >
              workLog:modal.add.alreadySendForApprovalDescription
            </p>
          </div>
        </fieldset>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.date
          </legend>
          <div
            className="field"
          >
            <div
              className="TextField__root___klT1b"
            >
              <label
                htmlFor="date"
              >
                <div
                  className="TextField__isLabelHidden___V036S"
                >
                  workLog:element.date
                </div>
                <input
                  className="TextField__input___1q3SS"
                  disabled={true}
                  id="date"
                  onChange={null}
                  placeholder={null}
                  required={false}
                  type="text"
                  value="01. 01. 2018"
                />
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.type
          </legend>
          <div
            className="field"
          >
            <div
              className="SelectField__isRootCondensed___12nWu SelectField__root___kRfuX"
            >
              <label
                htmlFor="type"
              >
                <div
                  className="SelectField__isLabelHidden___1bsHa"
                >
                  workLog:element.type
                </div>
                <select
                  className="SelectField__select___1XVeg"
                  disabled={false}
                  id="type"
                  onChange={[Function]}
                  required={false}
                  value="WORK_LOG"
                >
                  <option
                    key="WORK_LOG"
                    value="WORK_LOG"
                  >
                    workMonth:constant.type.workLog
                  </option>
                  <option
                    key="BUSINESS_TRIP_WORK_LOG"
                    value="BUSINESS_TRIP_WORK_LOG"
                  >
                    workMonth:constant.type.businessTripWorkLog
                  </option>
                  <option
                    key="HOME_OFFICE_WORK_LOG"
                    value="HOME_OFFICE_WORK_LOG"
                  >
                    workMonth:constant.type.homeOfficeWorkLog
                  </option>
                  <option
                    key="OVERTIME_WORK_LOG"
                    value="OVERTIME_WORK_LOG"
                  >
                    workMonth:constant.type.overtimeWorkLog
                  </option>
                  <option
                    key="SICK_DAY_WORK_LOG"
                    value="SICK_DAY_WORK_LOG"
                  >
                    workMonth:constant.type.sickDayWorkLog
                  </option>
                  <option
                    key="TIME_OFF_WORK_LOG"
                    value="TIME_OFF_WORK_LOG"
                  >
                    workMonth:constant.type.timeOffWorkLog
                  </option>
                  <option
                    key="VACATION_WORK_LOG"
                    value="VACATION_WORK_LOG"
                  >
                    workMonth:constant.type.vacationWorkLog
                  </option>
                </select>
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.startTime
          </legend>
          <div>
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="startHour"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.startHour
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="startHour"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="00"
                  />
                </label>
              </div>
            </div>
            :
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="startMinute"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.startMinute
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="startMinute"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="57"
                  />
                </label>
              </div>
            </div>
             h
          </div>
        </fieldset>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.endTime
          </legend>
          <div>
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="endHour"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.endHour
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="endHour"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="01"
                  />
                </label>
              </div>
            </div>
            :
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="endMinute"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.endMinute
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="endMinute"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="03"
                  />
                </label>
              </div>
            </div>
             h
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="Modal__footer___8hj48"
    >
      <span
        className="Modal__button___3F_6S"
      >
        <button
          className="Button__root___1siS8
        Button__priorityPrimary___2lQD8
        Button__sizeMedium___Ljlz9"
          disabled={false}
          onClick={[Function]}
          title="general:action.save"
          type="button"
        >
          <span>
            general:action.save
          </span>
        </button>
      </span>
      <span
        className="Modal__button___3F_6S"
      >
        <button
          className="Button__root___1siS8
        Button__priorityDefault___mVWp6
        Button__sizeMedium___Ljlz9"
          disabled={false}
          onClick={[Function]}
          title="general:action.close"
          type="button"
        >
          <span>
            general:action.close
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with mandatory props 1`] = `
<div
  className="Modal__overlay___1esDn"
  onClick={[Function]}
  onScroll={[Function]}
  role="presentation"
>
  <div
    className="Modal__root___2RrQs"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="Modal__head___21nX6"
    >
      <h3
        className="Modal__headTitle___24upJ"
      >
        workLog:modal.add.title
      </h3>
      <button
        className="Button__root___1siS8
        Button__priorityFlat___21jzk
        Button__sizeLarge___2ZbaS
        
        Button__iconPositionBefore___1ljSO"
        disabled={false}
        onClick={[Function]}
        title={null}
        type="button"
      >
        <span
          className="Button__icon___2PzW6
            Button__resetMargin___3FmbU"
        >
          <svg
            className="Icon__isRootLarge___1tPUq Icon__root___3fU2F"
            style={
              Object {
                "fill": "currentColor",
              }
            }
          >
            <use
              xlinkHref="#ic_close_48px"
            />
          </svg>
        </span>
        <span
          className="Button__hiddenLabel___22zCB"
        >
          general:action.close
        </span>
      </button>
    </div>
    <div
      className="Modal__body___2m3j7"
    >
      <p
        className="formErrorText"
      />
      <form>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.date
          </legend>
          <div
            className="field"
          >
            <div
              className="TextField__root___klT1b"
            >
              <label
                htmlFor="date"
              >
                <div
                  className="TextField__isLabelHidden___V036S"
                >
                  workLog:element.date
                </div>
                <input
                  className="TextField__input___1q3SS"
                  disabled={true}
                  id="date"
                  onChange={null}
                  placeholder={null}
                  required={false}
                  type="text"
                  value="01. 01. 2018"
                />
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.type
          </legend>
          <div
            className="field"
          >
            <div
              className="SelectField__isRootCondensed___12nWu SelectField__root___kRfuX"
            >
              <label
                htmlFor="type"
              >
                <div
                  className="SelectField__isLabelHidden___1bsHa"
                >
                  workLog:element.type
                </div>
                <select
                  className="SelectField__select___1XVeg"
                  disabled={false}
                  id="type"
                  onChange={[Function]}
                  required={false}
                  value="WORK_LOG"
                >
                  <option
                    key="WORK_LOG"
                    value="WORK_LOG"
                  >
                    workMonth:constant.type.workLog
                  </option>
                  <option
                    key="BUSINESS_TRIP_WORK_LOG"
                    value="BUSINESS_TRIP_WORK_LOG"
                  >
                    workMonth:constant.type.businessTripWorkLog
                  </option>
                  <option
                    key="HOME_OFFICE_WORK_LOG"
                    value="HOME_OFFICE_WORK_LOG"
                  >
                    workMonth:constant.type.homeOfficeWorkLog
                  </option>
                  <option
                    key="OVERTIME_WORK_LOG"
                    value="OVERTIME_WORK_LOG"
                  >
                    workMonth:constant.type.overtimeWorkLog
                  </option>
                  <option
                    key="SICK_DAY_WORK_LOG"
                    value="SICK_DAY_WORK_LOG"
                  >
                    workMonth:constant.type.sickDayWorkLog
                  </option>
                  <option
                    key="TIME_OFF_WORK_LOG"
                    value="TIME_OFF_WORK_LOG"
                  >
                    workMonth:constant.type.timeOffWorkLog
                  </option>
                  <option
                    key="VACATION_WORK_LOG"
                    value="VACATION_WORK_LOG"
                  >
                    workMonth:constant.type.vacationWorkLog
                  </option>
                </select>
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.startTime
          </legend>
          <div>
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="startHour"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.startHour
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="startHour"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="00"
                  />
                </label>
              </div>
            </div>
            :
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="startMinute"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.startMinute
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="startMinute"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="57"
                  />
                </label>
              </div>
            </div>
             h
          </div>
        </fieldset>
        <fieldset
          className="fieldset"
        >
          <legend>
            workLog:element.endTime
          </legend>
          <div>
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="endHour"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.endHour
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="endHour"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="01"
                  />
                </label>
              </div>
            </div>
            :
            <div
              className="field fieldDate"
            >
              <div
                className="TextField__root___klT1b"
              >
                <label
                  htmlFor="endMinute"
                >
                  <div
                    className="TextField__isLabelHidden___V036S"
                  >
                    workLog:element.endMinute
                  </div>
                  <input
                    className="TextField__input___1q3SS"
                    disabled={false}
                    id="endMinute"
                    onChange={[Function]}
                    placeholder={null}
                    required={false}
                    type="text"
                    value="03"
                  />
                </label>
              </div>
            </div>
             h
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="Modal__footer___8hj48"
    >
      <span
        className="Modal__button___3F_6S"
      >
        <button
          className="Button__root___1siS8
        Button__priorityPrimary___2lQD8
        Button__sizeMedium___Ljlz9"
          disabled={false}
          onClick={[Function]}
          title="general:action.save"
          type="button"
        >
          <span>
            general:action.save
          </span>
        </button>
      </span>
      <span
        className="Modal__button___3F_6S"
      >
        <button
          className="Button__root___1siS8
        Button__priorityDefault___mVWp6
        Button__sizeMedium___Ljlz9"
          disabled={false}
          onClick={[Function]}
          title="general:action.close"
          type="button"
        >
          <span>
            general:action.close
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;
